# russian-stress-benchmark

./: .gitignore  pyproject.toml
russian_stress_benchmark/: __init__.py  benchmark.py
