[tool.poetry]
name = "russian-stress-benchmark"
version = "0.1.1"
description = ""
authors = ["Vuizur <Vuizur@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "russian_stress_benchmark"}]

[tool.poetry.dependencies]
python = ">=3.6, <4.0"
stressed-cyrillic-tools = "^0.1.10"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
